Stop optimizing visibility if children not aligned.

--- a/client/css/widgets/pile.css
+++ b/client/css/widgets/pile.css
@@ -2,7 +2,7 @@
   will-change: transform;
 }
 
-.pile > :not(.visible-in-pile):not(.handle) {
+.pile.optimize-visibility > :not(.visible-in-pile):not(.handle) {
   display: none;
 }
 
